fix contact spacing

--- a/index.css
+++ b/index.css
@@ -1020,7 +1020,7 @@ p.lead {
     }
 
     .map-body {
-        padding: 16px 0;
+        padding: 16px 0
     }
 }
 
